--- a/index.html
+++ b/index.html
@@ -9,12 +9,78 @@
     <!-- bootstrap css  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- css style  -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <h1>
-        Hello honda cbr
-    </h1>
+
+    <header>
+
+        <!-- navber -->
+        <nav class="navbar navbar-expand-lg navbar-dark text-light">
+            <div class="container">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Shop</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">News</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">
+                                <button class="btn btn-success ">log in</button>
+                            </a>
+                        </li>
+
+
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+
+
+
+        <!-- header section  -->
+        <section class="container ">
+            <div class="row">
+                <div class="col-lg-6 d-flex align-items-center text-light">
+                    <div class="ms-5">
+                        <p>Computer-controlled digital transistorized with electronic advance</p>
+                        <h1>Honda CBR 300R</h1>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                            consequat
+                            duis
+                            enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                        <button class="btn btn btn-warning">Purchase</button>
+                    </div>
+                </div>
+                <div class="col-lg-6 d-flex align-items-center">
+                    <img class="img-fluid" src="images/header-bike.png" alt="">
+                </div>
+
+            </div>
+
+
+
+
+
+
+        </section>
+
+    </header>
+
+
+
 
 
 
