--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
 
         <!-- navber -->
-        <nav class="navbar navbar-expand-lg navbar-dark text-light">
+        <!-- <nav class="navbar navbar-expand-lg navbar-dark text-light">
             <div class="container">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,47 +40,99 @@
                                 <button class="btn btn-success ">log in</button>
                             </a>
                         </li>
-
-
                     </ul>
                 </div>
             </div>
-        </nav>
+        </nav> -->
 
 
 
 
         <!-- header section  -->
-        <section class="container ">
+        <section class="container py-5">
             <div class="row">
                 <div class="col-lg-6 d-flex align-items-center text-light">
                     <div class="ms-5">
                         <p>Computer-controlled digital transistorized with electronic advance</p>
-                        <h1>Honda CBR 300R</h1>
+                        <h1 class="pb-3">Honda CBR 300R</h1>
                         <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
                             consequat
                             duis
                             enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-                        <button class="btn btn btn-warning">Purchase</button>
+
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn purchase-button text-light" data-bs-toggle="modal"
+                            data-bs-target="#exampleModal">
+                            Purchase
+                        </button>
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                            aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title text-dark" id="exampleModalLabel">Confirmation</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body text-dark">
+                                        <p>Are you really want to Purchase this product? If you confirm,then your money
+                                            will be deducted .. </p>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary"
+                                            data-bs-dismiss="modal">Close</button>
+                                        <a target="_blank" href="https://www.bdhonda.com/"> <button type="button"
+                                                class="btn btn-primary">Yes</button></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-6 d-flex align-items-center">
                     <img class="img-fluid" src="images/header-bike.png" alt="">
                 </div>
-
             </div>
-
-
-
-
-
-
         </section>
 
     </header>
 
 
 
+    <main>
+        <section class="container">
+            <div class="text-center py-5">
+                <h1>Fetured Bikes 2021</h1>
+                <p>Best bike collection</p>
+            </div>
+            <!-- grayscale -->
+            <div class="container ">
+                <div class="row g-3 py-5">
+                    <div class="col-lg-4">
+                        <div class="p-3 image-grayscale ">
+                            <img src="images/feature-bike.jpg" width="288" height="234" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="p-3 ">
+                            <img src="images/feature-bike.jpg" width="288" height="234" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="p-3 image-grayscale">
+                            <img src="images/feature-bike.jpg" width="288" height="234" alt="">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+
+
+
+        </section>
+    </main>
 
 
 
@@ -91,6 +143,9 @@
 
 
 
+    <footer>
+
+    </footer>
 
 
     <!-- bootstrap js  -->
