--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- css style  -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- font awesome  -->
+    <script src="https://kit.fontawesome.com/0a4c76244e.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -102,9 +104,9 @@
 
     <main>
         <section class="container">
-            <div class="text-center py-5">
-                <h1>Fetured Bikes 2021</h1>
-                <p>Best bike collection</p>
+            <div class="text-center py-5 ">
+                <h1 class="fs-1">Fetured Bikes 2021</h1>
+                <p class="orange-color">Best bike collection</p>
             </div>
             <!-- grayscale -->
             <div class="container ">
