client section started

--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
                 <div class="col-lg-6 d-flex align-items-center text-light">
                     <div class="ms-5">
                         <p>Computer-controlled digital transistorized with electronic advance</p>
-                        <h1 class="pb-3">Honda CBR 300R</h1>
-                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                        <h1 class="pb-3 fw-bold">Honda CBR 300R</h1>
+                        <p class="w-75">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                            officia
                             consequat
                             duis
                             enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
@@ -103,10 +104,11 @@
 
 
     <main>
+        <!-- Fetured section  -->
         <section class="container">
             <div class="text-center py-5 ">
-                <h1 class="fs-1">Fetured Bikes 2021</h1>
-                <p class="orange-color">Best bike collection</p>
+                <h1 class=" fw-bold">Fetured Bikes 2021</h1>
+                <p class="orange-color fw-bold">Best bike collection</p>
             </div>
             <!-- grayscale -->
             <div class="container ">
@@ -116,12 +118,12 @@
                             <img src="images/feature-bike.jpg" width="288" height="234" alt="">
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 ">
                         <div class="p-3 ">
                             <img src="images/feature-bike.jpg" width="288" height="234" alt="">
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 ">
                         <div class="p-3 image-grayscale">
                             <img src="images/feature-bike.jpg" width="288" height="234" alt="">
                         </div>
@@ -129,9 +131,11 @@
 
                 </div>
             </div>
+        </section>
 
-
-
+        <!-- clients reviews  -->
+        <section class="container">
+            <h1 class="fw-bold text-center">Happy <span class="orange-color">Clients Says</span></h1>
 
         </section>
     </main>
