client section finised

--- a/index.html
+++ b/index.html
@@ -134,9 +134,77 @@
         </section>
 
         <!-- clients reviews  -->
-        <section class="container">
-            <h1 class="fw-bold text-center">Happy <span class="orange-color">Clients Says</span></h1>
+        <section class="container w-100">
+            <h1 class="fw-bold text-center py-3">Happy <span class="orange-color">Clients Says</span></h1>
+            <div class="row row-cols-1 row-cols-md-2 g-4">
+                <div class="col-lg-4">
+                    <div class="card ">
+                        <div class="w-50 rounded mx-auto d-block py-4">
+                            <img src="images/user-1.png" class="card-img-top alt=" ...">
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text text-center w-75 ms-5">Slate helps you see how many more days you need
+                                to
+                                work to
+                                reach your financial goal for the month and year.</p>
+                        </div>
+                        <div class="text-center">
+                            <i class="fas fa-star orange-color"></i>
+                            <i class="fas fa-star orange-color"></i>
+                            <i class="fas fa-star orange-color"></i>
+                            <i class="fas fa-star orange-color"></i>
+                            <i class="far fa-star orange-color"></i>
+                        </div>
+                        <h5 class="card-title text-center">Regina Miles</h5>
+                        <p class="fw-bold text-center ">Banker</p>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card ">
+                        <div class="w-50 rounded mx-auto d-block py-4">
+                            <img src="images/user-1.png" class="card-img-top alt=" ...">
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text text-center w-75 ms-5">Slate helps you see how many more days you need
+                                to
+                                work to
+                                reach your financial goal for the month and year.</p>
+                        </div>
+                        <div class="text-center">
+                            <i class="fas fa-star orange-color"></i>
+                            <i class="fas fa-star orange-color"></i>
+                            <i class="fas fa-star orange-color"></i>
+                            <i class="fas fa-star orange-color"></i>
+                            <i class="far fa-star orange-color"></i>
+                        </div>
+                        <h5 class="card-title text-center">Regina Miles</h5>
+                        <p class="fw-bold text-center ">Banker</p>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card ">
+                        <div class="w-50 rounded mx-auto d-block py-4">
+                            <img src="images/user-1.png" class="card-img-top alt=" ...">
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text text-center ">Slate helps you see how many more days you need
+                                to
+                                work to
+                                reach your financial goal for the month and year.</p>
+                        </div>
+                        <div class="text-center ">
+                            <i class="fas fa-star orange-color"></i>
+                            <i class="fas fa-star orange-color"></i>
+                            <i class="fas fa-star orange-color"></i>
+                            <i class="fas fa-star orange-color"></i>
+                            <i class="far fa-star orange-color"></i>
+                        </div>
+                        <h5 class="card-title text-center">Regina Miles</h5>
+                        <p class="fw-bold text-center ">Banker</p>
+                    </div>
+                </div>
 
+            </div>
         </section>
     </main>
 
