--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </div>
             <!-- grayscale -->
             <div class="container ">
-                <div class="row g-3 py-5">
+                <div class="row row-cols-1 row-cols-md-2 g-4">
                     <div class="col-lg-4">
                         <div class="p-3 image-grayscale ">
                             <img src="images/feature-bike.jpg" width="288" height="234" alt="">
@@ -134,19 +134,17 @@
         </section>
 
         <!-- clients reviews  -->
-        <section class="container w-100">
+        <section class="container ">
             <h1 class="fw-bold text-center py-3">Happy <span class="orange-color">Clients Says</span></h1>
             <div class="row row-cols-1 row-cols-md-2 g-4">
                 <div class="col-lg-4">
                     <div class="card ">
                         <div class="w-50 rounded mx-auto d-block py-4">
-                            <img src="images/user-1.png" class="card-img-top alt=" ...">
+                            <img src="images/user-1.png" class="card-img-top " alt="...">
                         </div>
                         <div class="card-body">
                             <p class="card-text text-center w-75 ms-5">Slate helps you see how many more days you need
-                                to
-                                work to
-                                reach your financial goal for the month and year.</p>
+                                to work to reach your financial goal for the month and year.</p>
                         </div>
                         <div class="text-center">
                             <i class="fas fa-star orange-color"></i>
@@ -162,13 +160,11 @@
                 <div class="col-lg-4">
                     <div class="card ">
                         <div class="w-50 rounded mx-auto d-block py-4">
-                            <img src="images/user-1.png" class="card-img-top alt=" ...">
+                            <img src="images/user-2.png" class="card-img-top " alt=" ...">
                         </div>
                         <div class="card-body">
                             <p class="card-text text-center w-75 ms-5">Slate helps you see how many more days you need
-                                to
-                                work to
-                                reach your financial goal for the month and year.</p>
+                                to work to reach your financial goal for the month and year.</p>
                         </div>
                         <div class="text-center">
                             <i class="fas fa-star orange-color"></i>
@@ -184,15 +180,13 @@
                 <div class="col-lg-4">
                     <div class="card ">
                         <div class="w-50 rounded mx-auto d-block py-4">
-                            <img src="images/user-1.png" class="card-img-top alt=" ...">
+                            <img src="images/user-1.png" class="card-img-top " alt=" ...">
                         </div>
                         <div class="card-body">
-                            <p class="card-text text-center ">Slate helps you see how many more days you need
-                                to
-                                work to
-                                reach your financial goal for the month and year.</p>
+                            <p class="card-text text-center w-75 ms-5">Slate helps you see how many more days you need
+                                to work to reach your financial goal for the month and year.</p>
                         </div>
-                        <div class="text-center ">
+                        <div class="text-center">
                             <i class="fas fa-star orange-color"></i>
                             <i class="fas fa-star orange-color"></i>
                             <i class="fas fa-star orange-color"></i>
@@ -203,9 +197,40 @@
                         <p class="fw-bold text-center ">Banker</p>
                     </div>
                 </div>
+        </section>
 
+        <section class="container">
+            <h1 class="py-5 text-center">
+                Frequently Asked <span class="orange-color">Questions</span>
+            </h1>
+            <div class="row">
+                <div class="col-lg-6 ">
+                    <img class="img-fluid w-75" src="images/faq.png" alt="">
+                </div>
+                <div class="col-lg-6">
+                    <div class=" border border-2 p-3 m-2">
+                        <h4>What are the most important things I should
+                            know about riding a bike?</h4>
+                        <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws.
+                            Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be
+                            a more focused and legally compliant bike rider. </p>
+                    </div>
+                    <div class=" border border-2 p-3 m-2">
+                        <h4>How can I tell if my helmet is old and I need a
+                            new one?</h4>
+
+                    </div>
+                    <div class=" border border-2 p-3 m-2">
+                        <h4>My bike has been in storage is it safe to ride?</h4>
+                    </div>
+                    <div class=" border border-2 p-3 m-2">
+                        <h4>What rules should I follow when riding my bike?</h4>
+                    </div>
+                </div>
             </div>
         </section>
+
+
     </main>
 
 
