--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
             <div class="row">
                 <div class="col-lg-6 d-flex align-items-center text-light">
                     <div class="ms-5">
-                        <p>Computer-controlled digital transistorized with electronic advance</p>
+                        <p class="fs-6 ">Computer-controlled digital transistorized with electronic advance</p>
                         <h1 class="pb-3 fw-bold">Honda CBR 300R</h1>
-                        <p class="w-75">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                        <p class=" fs-6">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+                            Velit
                             officia
                             consequat
                             duis
@@ -137,7 +138,7 @@
         <section class="container ">
             <h1 class="fw-bold text-center py-3">Happy <span class="orange-color">Clients Says</span></h1>
             <div class="row row-cols-1 row-cols-md-2 g-4">
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-12">
                     <div class="card ">
                         <div class="w-50 rounded mx-auto d-block py-4">
                             <img src="images/user-1.png" class="card-img-top " alt="...">
@@ -157,7 +158,7 @@
                         <p class="fw-bold text-center ">Banker</p>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-12">
                     <div class="card ">
                         <div class="w-50 rounded mx-auto d-block py-4">
                             <img src="images/user-2.png" class="card-img-top " alt=" ...">
@@ -177,7 +178,7 @@
                         <p class="fw-bold text-center ">Banker</p>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-12">
                     <div class="card ">
                         <div class="w-50 rounded mx-auto d-block py-4">
                             <img src="images/user-1.png" class="card-img-top " alt=" ...">
@@ -199,33 +200,98 @@
                 </div>
         </section>
 
+        <!-- Frequently Asked section  -->
+
         <section class="container">
-            <h1 class="py-5 text-center">
+            <h1 class="py-5 text-center fw-bold">
                 Frequently Asked <span class="orange-color">Questions</span>
             </h1>
-            <div class="row">
-                <div class="col-lg-6 ">
-                    <img class="img-fluid w-75" src="images/faq.png" alt="">
+            <div class="row row-cols-1 row-cols-md-2 g-4 d-flex align-items-center">
+                <div class="col-12 col-md-12 col-lg-4 me-auto rounded">
+                    <img class="bg-primary img-fluid" src="images/faq.png" width="" alt="">
                 </div>
-                <div class="col-lg-6">
-                    <div class=" border border-2 p-3 m-2">
-                        <h4>What are the most important things I should
-                            know about riding a bike?</h4>
-                        <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws.
-                            Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be
-                            a more focused and legally compliant bike rider. </p>
+                <div class="">
+                    <div class=" border border-2  mb-2 rounded rounded-3">
+                        <div class="accordion accordion-flush" id="accordionFlushExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="flush-headingOne">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#flush-collapseOne" aria-expanded="false"
+                                        aria-controls="flush-collapseOne">
+                                        <h4 class="fw-bold fs-6">What are the most important things I should
+                                            know about riding a bike?</h4>
+                                    </button>
+                                </h2>
+                                <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                    aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">
+                                        <p>Safety First! Always obey the rules of the road. Obey all traffic signals</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class=" border border-2 p-3 m-2">
-                        <h4>How can I tell if my helmet is old and I need a
-                            new one?</h4>
+                    <div class=" border border-2  mb-2 rounded rounded-3">
+                        <div class="accordion accordion-flush" id="accordionFlushExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="flush-headingOne">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#flush-collapseOne" aria-expanded="false"
+                                        aria-controls="flush-collapseOne">
+                                        <h4 class="fw-bold fs-6">How can I tell if my helmet is old and I need a
+                                            new one?</h4>
+                                    </button>
+                                </h2>
+                                <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                    aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">
+                                        <p>Safety First! Always obey the rules of the road. Obey all traffic signals</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class=" border border-2  mb-2 h1 rounded rounded-3">
+                        <div class="accordion accordion-flush" id="accordionFlushExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="flush-headingOne">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#flush-collapseOne" aria-expanded="false"
+                                        aria-controls="flush-collapseOne">
+                                        <h4 class="fw-bold fs-6">My bike has been in storage is it safe to ride?</h4>
+                                    </button>
+                                </h2>
+                                <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                    aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">
+                                        <p>Safety First! Always obey the rules of the road. Obey all traffic signals.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class=" border border-2  mb-2 rounded rounded-3">
+                        <div class="accordion accordion-flush" id="accordionFlushExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="flush-headingOne">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#flush-collapseOne" aria-expanded="false"
+                                        aria-controls="flush-collapseOne">
+                                        <h4 class="fw-bold fs-6">What rules should I follow when riding my bike?</h4>
+                                    </button>
+                                </h2>
+                                <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                    aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">
+                                        <p>Safety First! Always obey the rules of the road. Obey all traffic signals.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-                    </div>
-                    <div class=" border border-2 p-3 m-2">
-                        <h4>My bike has been in storage is it safe to ride?</h4>
-                    </div>
-                    <div class=" border border-2 p-3 m-2">
-                        <h4>What rules should I follow when riding my bike?</h4>
-                    </div>
                 </div>
             </div>
         </section>
