--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <section class="container ">
             <h1 class="fw-bold text-center py-3">Happy <span class="orange-color">Clients Says</span></h1>
             <div class="row row-cols-1 row-cols-md-2 g-4">
-                <div class="col-lg-4 col-12">
+                <div class="col-lg-4 col-md-12 col-12">
                     <div class="card ">
                         <div class="w-50 rounded mx-auto d-block py-4">
                             <img src="images/user-1.png" class="card-img-top " alt="...">
@@ -164,7 +164,7 @@
                             <img src="images/user-2.png" class="card-img-top " alt=" ...">
                         </div>
                         <div class="card-body">
-                            <p class="card-text text-center w-75 ms-5">Slate helps you see how many more days you need
+                            <p class="card-text text-center ms-5">Slate helps you see how many more days you need
                                 to work to reach your financial goal for the month and year.</p>
                         </div>
                         <div class="text-center">
@@ -206,9 +206,9 @@
             <h1 class="py-5 text-center fw-bold">
                 Frequently Asked <span class="orange-color">Questions</span>
             </h1>
-            <div class="row row-cols-1 row-cols-md-2 g-4 d-flex align-items-center">
-                <div class="col-12 col-md-12 col-lg-4 me-auto rounded">
-                    <img class="bg-primary img-fluid" src="images/faq.png" width="" alt="">
+            <div class="row row-cols-1 row-cols-md-2 g-4 d-flex py-5 align-items-center">
+                <div class="col-12  col-lg-4 me-auto rounded">
+                    <img class="img-fluid" src="images/faq.png" width="w-100" alt="">
                 </div>
                 <div class="">
                     <div class=" border border-2  mb-2 rounded rounded-3">
@@ -291,10 +291,147 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </section>
+
+        <!-- blogs section  -->
+
+        <section class="container bg-gradient">
+            <h1 class="pt-3 text-center fw-bold orange-color">Blogs</h1>
+
+            <div class="row  py-5 border border-2 m-1 rounded rounded-3 shadow">
+                <!-- single blogs  -->
+                <div class="col-12 col-md-12 col-lg-6 d-flex align-items-center p-3 image-grayscale">
+                    <div>
+                        <h1 class="fw-bold">Automatic DCT Transmission </h1>
+                        <h6 class="fw-bold">Exclusive technology that will change the way you ride.</h6>
+                        <p class=" ">The Honda Automatic DCT Transmission makes the best parts of riding
+                            more
+                            enjoyable while,
+                            reducing unnecessary hassles. With all the performance of a manual transmission and the
+                            convenience of an automatic, you’ll stay connected to your machine, and free to experience
+                            the
+                            world around you. There’s a lot to explore out there—let’s start by exploring DCT.
+                        <p>
+                            <button type="button" class="btn purchase-button text-light ">
+                                DISCOVER DCT
+                            </button>
+                        </p>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-12 col-lg-6 mb-5">
+                    <img class="img-fluid" src="images/bike-1.png" alt="">
+                </div>
+
+                <!-- single blogs  -->
+                <div class="col-12 col-md-12 col-lg-6  order-1 order-md-0 ">
+                    <img class="img-fluid image-grayscale" src="images/bike-1.png " alt="">
+                </div>
+                <div class="col-12 col-md-12 col-lg-6 d-flex align-items-center p-3 order-0 order-md-1 ">
+                    <div>
+                        <h1 class="fw-bold">Android Auto for Your Africa Twin </h1>
+                        <h6 class="fw-bold">Check Out our Software Update</h6>
+                        <p class=" ">The Honda Automatic DCT Transmission makes the best parts of riding
+                            more
+                            enjoyable while,
+                            reducing unnecessary hassles. With all the performance of a manual transmission and the
+                            convenience of an automatic, you’ll stay connected to your machine, and free to experience
+                            the
+                            world around you. There’s a lot to explore out there—let’s start by exploring DCT.
+                        <p>
+                            <button type="button" class="btn purchase-button text-light ">
+                                DISCOVER DCT
+                            </button>
+                        </p>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- sign in section -->
+
+        <section class="container my-5">
+
+            <div class="row border border-2 g-4 ">
+                <h1 class="fw-bold text-center p-2">LATEST NEWS</h1>
+                <div class="col-12 col-md-6 col-lg-4 ">
+                    <div class=" card bg-dark text-white ">
+                        <img src="images/bike-2.png" class="card-img " alt="...">
+                        <div class="card-img-overlay ">
+                            <h5 class="card-title">Honda Care® Plans</h5>
+                            <p class="card-text pt2">Experience the benefits of protecting and maintaining your vehicle
+                                by choosing from a variety of Honda Care® plans. Vehicles less than three years old with
+                                fewer than 36.</p>
+                            <p class="card-text">JULY 19, 2021</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class=" card bg-dark text-white ">
+                        <img src="images/bike-2.png" class="card-img image-grayscale" alt="...">
+                        <div class="card-img-overlay ">
+                            <h5 class="card-title">Honda Care® Plans</h5>
+                            <p class="card-text pt2">Atlanta Speedwerks leads Honda Civic Type R TCRs at Lime Rock.</p>
+                            <p class="card-text">JULY 19, 2021</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class=" card bg-dark text-white ">
+                        <img src="images/bike-2.png" class="card-img " alt="...">
+                        <div class="card-img-overlay ">
+                            <h5 class="card-title">Honda Care® Plans</h5>
+                            <p class="card-text pt2">Atlanta Speedwerks leads Honda Civic Type R TCRs at Lime Rock.</p>
+                            <p class="card-text">JULY 19, 2021</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class=" card bg-dark text-white ">
+                        <img src="images/bike-2.png" class="card-img image-grayscale" alt="...">
+                        <div class="card-img-overlay ">
+                            <h5 class="card-title">Honda Care® Plans</h5>
+                            <p class="card-text pt2">Atlanta Speedwerks leads Honda Civic Type R TCRs at Lime Rock.</p>
+                            <p class="card-text">JULY 19, 2021</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class=" card bg-dark text-white ">
+                        <img src="images/bike-2.png" class="card-img " alt="...">
+                        <div class="card-img-overlay ">
+                            <h5 class="card-title">Honda Care® Plans</h5>
+                            <p class="card-text pt2">Atlanta Speedwerks leads Honda Civic Type R TCRs at Lime Rock.</p>
+                            <p class="card-text">JULY 19, 2021</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class=" card bg-dark text-white ">
+                        <img src="images/bike-2.png" class="card-img image-grayscale" alt="...">
+                        <div class="card-img-overlay ">
+                            <h5 class="card-title">Honda Care® Plans</h5>
+                            <p class="card-text pt2">Atlanta Speedwerks leads Honda Civic Type R TCRs at Lime Rock.</p>
+                            <p class="card-text">JULY 19, 2021</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+
+
+
+
+
+
+
+
 
 
     </main>
@@ -308,8 +445,8 @@
 
 
 
-    <footer>
-
+    <footer class="container">
+        <p class="text-center">© 2020 bike. All rights reserved</p>
     </footer>
 
 
