--- a/index.html
+++ b/index.html
@@ -53,19 +53,16 @@
         <!-- header section  -->
         <section class="container py-5">
             <div class="row">
-                <div class="col-lg-6 d-flex align-items-center text-light">
+                <div class="col-lg-6 d-flex align-items-center text-light ">
                     <div class="ms-5">
-                        <p class="fs-6 ">Computer-controlled digital transistorized with electronic advance</p>
+                        <p class="w-100">Computer-controlled digital transistorized with electronic advance</p>
                         <h1 class="pb-3 fw-bold">Honda CBR 300R</h1>
-                        <p class=" fs-6">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
-                            Velit
-                            officia
-                            consequat
-                            duis
-                            enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                        <p class="fs-6">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.Velit
+                            officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                        </p>
 
                         <!-- Button trigger modal -->
-                        <button type="button" class="btn purchase-button text-light" data-bs-toggle="modal"
+                        <button type="button " class="btn purchase-button text-light " data-bs-toggle="modal"
                             data-bs-target="#exampleModal">
                             Purchase
                         </button>
@@ -94,7 +91,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 d-flex align-items-center">
+                <div class="col-lg-6 d-flex align-items-center ">
                     <img class="img-fluid" src="images/header-bike.png" alt="">
                 </div>
             </div>
@@ -135,7 +132,7 @@
         </section>
 
         <!-- clients reviews  -->
-        <section class="container ">
+        <section class="container py-5">
             <h1 class="fw-bold text-center py-3">Happy <span class="orange-color">Clients Says</span></h1>
             <div class="row row-cols-1 row-cols-md-2 g-4">
                 <div class="col-lg-4 col-md-12 col-12">
@@ -210,7 +207,7 @@
                 <div class="col-12  col-lg-4 me-auto rounded">
                     <img class="img-fluid" src="images/faq.png" width="w-100" alt="">
                 </div>
-                <div class="">
+                <div>
                     <div class=" border border-2  mb-2 rounded rounded-3">
                         <div class="accordion accordion-flush" id="accordionFlushExample">
                             <div class="accordion-item">
@@ -236,35 +233,37 @@
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="flush-headingOne">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#flush-collapseOne" aria-expanded="false"
-                                        aria-controls="flush-collapseOne">
-                                        <h4 class="fw-bold fs-6">How can I tell if my helmet is old and I need a
-                                            new one?</h4>
+                                        data-bs-target="#flush-collapseTwo" aria-expanded="false"
+                                        aria-controls="flush-collapseTwo">
+                                        <h4 class="fw-bold fs-6">What are the most important things I should
+                                            know about riding a bike?</h4>
                                     </button>
                                 </h2>
-                                <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                <div id="flush-collapseTwo" class="accordion-collapse collapse"
                                     aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
                                     <div class="accordion-body">
-                                        <p>Safety First! Always obey the rules of the road. Obey all traffic signals</p>
+                                        <p>Safety First! Always obey the rules of the road. Obey all traffic signals
+                                        </p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class=" border border-2  mb-2 h1 rounded rounded-3">
+                    <div class=" border border-2  mb-3 rounded rounded-3">
                         <div class="accordion accordion-flush" id="accordionFlushExample">
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="flush-headingOne">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#flush-collapseOne" aria-expanded="false"
-                                        aria-controls="flush-collapseOne">
-                                        <h4 class="fw-bold fs-6">My bike has been in storage is it safe to ride?</h4>
+                                        data-bs-target="#flush-collapseThree" aria-expanded="false"
+                                        aria-controls="flush-collapseThree">
+                                        <h4 class="fw-bold fs-6">What are the most important things I should
+                                            know about riding a bike?</h4>
                                     </button>
                                 </h2>
-                                <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                <div id="flush-collapseThree" class="accordion-collapse collapse"
                                     aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
                                     <div class="accordion-body">
-                                        <p>Safety First! Always obey the rules of the road. Obey all traffic signals.
+                                        <p>Safety First! Always obey the rules of the road. Obey all traffic signals
                                         </p>
                                     </div>
                                 </div>
@@ -276,30 +275,30 @@
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="flush-headingOne">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#flush-collapseOne" aria-expanded="false"
-                                        aria-controls="flush-collapseOne">
-                                        <h4 class="fw-bold fs-6">What rules should I follow when riding my bike?</h4>
+                                        data-bs-target="#flush-collapseFour" aria-expanded="false"
+                                        aria-controls="flush-collapseFour">
+                                        <h4 class="fw-bold fs-6">What are the most important things I should
+                                            know about riding a bike?</h4>
                                     </button>
                                 </h2>
-                                <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                <div id="flush-collapseFour" class="accordion-collapse collapse"
                                     aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
                                     <div class="accordion-body">
-                                        <p>Safety First! Always obey the rules of the road. Obey all traffic signals.
+                                        <p>Safety First! Always obey the rules of the road. Obey all traffic signals
                                         </p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+
                 </div>
-            </div>
         </section>
 
         <!-- blogs section  -->
 
         <section class="container bg-gradient">
             <h1 class="pt-3 text-center fw-bold orange-color">Blogs</h1>
-
             <div class="row  py-5 border border-2 m-1 rounded rounded-3 shadow">
                 <!-- single blogs  -->
                 <div class="col-12 col-md-12 col-lg-6 d-flex align-items-center p-3 image-grayscale">
@@ -354,7 +353,6 @@
         <!-- sign in section -->
 
         <section class="container my-5">
-
             <div class="row border border-2 g-4 ">
                 <h1 class="fw-bold text-center p-2">LATEST NEWS</h1>
                 <div class="col-12 col-md-6 col-lg-4 ">
@@ -435,14 +433,6 @@
 
 
     </main>
-
-
-
-
-
-
-
-
 
 
     <footer class="container">
