--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                             <img src="images/user-2.png" class="card-img-top " alt=" ...">
                         </div>
                         <div class="card-body">
-                            <p class="card-text text-center ms-5">Slate helps you see how many more days you need
+                            <p class="card-text text-center w-75 ms-5">Slate helps you see how many more days you need
                                 to work to reach your financial goal for the month and year.</p>
                         </div>
                         <div class="text-center">
@@ -350,7 +350,7 @@
             </div>
         </section>
 
-        <!-- sign in section -->
+        <!-- LATEST NEWS section -->
 
         <section class="container my-5">
             <div class="row border border-2 g-4 ">
