--- a/index.html
+++ b/index.html
@@ -353,8 +353,8 @@
         <!-- LATEST NEWS section -->
 
         <section class="container my-5">
-            <div class="row border border-2 g-4 ">
-                <h1 class="fw-bold text-center p-2">LATEST NEWS</h1>
+            <div class="row border border-2 g-4 py-4 my-5">
+                <h1 class="fw-bold text-center ">LATEST NEWS</h1>
                 <div class="col-12 col-md-6 col-lg-4 ">
                     <div class=" card bg-dark text-white ">
                         <img src="images/bike-2.png" class="card-img " alt="...">
