--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         <!-- blogs section  -->
 
         <section class="container bg-gradient">
-            <h1 class="pt-3 text-center fw-bold orange-color">Blogs</h1>
+            <h1 class="pt-3 text-center fw-bold ">B<span class="orange-color">log</span>s</h1>
             <div class="row  py-5 border border-2 m-1 rounded rounded-3 shadow">
                 <!-- single blogs  -->
                 <div class="col-12 col-md-12 col-lg-6 d-flex align-items-center p-3 image-grayscale">
@@ -354,66 +354,66 @@
 
         <section class="container my-5">
             <div class="row border border-2 g-4 py-4 my-5">
-                <h1 class="fw-bold text-center ">LATEST NEWS</h1>
+                <h1 class="fw-bold text-center "><span class="orange-color">LATEST</span> NEWS</h1>
                 <div class="col-12 col-md-6 col-lg-4 ">
                     <div class=" card bg-dark text-white ">
-                        <img src="images/bike-2.png" class="card-img " alt="...">
-                        <div class="card-img-overlay ">
+                        <img src="images/images.jpg " class="card-img img-fluid p-5 image-grayscale" alt="...">
+                        <div class="card-img-overlay orange-color ">
                             <h5 class="card-title">Honda Care® Plans</h5>
                             <p class="card-text pt2">Experience the benefits of protecting and maintaining your vehicle
                                 by choosing from a variety of Honda Care® plans. Vehicles less than three years old with
                                 fewer than 36.</p>
-                            <p class="card-text">JULY 19, 2021</p>
+                            <p class="card-text">JULY 29, 2021</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class=" card bg-dark text-white ">
-                        <img src="images/bike-2.png" class="card-img image-grayscale" alt="...">
-                        <div class="card-img-overlay ">
+                        <img src="images/images.jpg " class="card-img  img-fluid p-5 " alt="...">
+                        <div class="card-img-overlay orange-color">
                             <h5 class="card-title">Honda Care® Plans</h5>
                             <p class="card-text pt2">Atlanta Speedwerks leads Honda Civic Type R TCRs at Lime Rock.</p>
-                            <p class="card-text">JULY 19, 2021</p>
+                            <p class="card-text">JULY 29, 2021</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class=" card bg-dark text-white ">
-                        <img src="images/bike-2.png" class="card-img " alt="...">
-                        <div class="card-img-overlay ">
+                        <img src="images/images.jpg " class="card-img  img-fluid p-5 image-grayscale" alt="...">
+                        <div class="card-img-overlay orange-color">
                             <h5 class="card-title">Honda Care® Plans</h5>
                             <p class="card-text pt2">Atlanta Speedwerks leads Honda Civic Type R TCRs at Lime Rock.</p>
-                            <p class="card-text">JULY 19, 2021</p>
+                            <p class="card-text">JULY 29, 2021</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class=" card bg-dark text-white ">
-                        <img src="images/bike-2.png" class="card-img image-grayscale" alt="...">
-                        <div class="card-img-overlay ">
+                        <img src="images/images.jpg " class="card-img  img-fluid p-5 " alt="...">
+                        <div class="card-img-overlay orange-color">
                             <h5 class="card-title">Honda Care® Plans</h5>
                             <p class="card-text pt2">Atlanta Speedwerks leads Honda Civic Type R TCRs at Lime Rock.</p>
-                            <p class="card-text">JULY 19, 2021</p>
+                            <p class="card-text">JULY 29, 2021</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class=" card bg-dark text-white ">
-                        <img src="images/bike-2.png" class="card-img " alt="...">
-                        <div class="card-img-overlay ">
+                        <img src="images/images.jpg " class="card-img  img-fluid p-5 image-grayscale" alt="...">
+                        <div class="card-img-overlay orange-color">
                             <h5 class="card-title">Honda Care® Plans</h5>
                             <p class="card-text pt2">Atlanta Speedwerks leads Honda Civic Type R TCRs at Lime Rock.</p>
-                            <p class="card-text">JULY 19, 2021</p>
+                            <p class="card-text">JULY 29, 2021</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class=" card bg-dark text-white ">
-                        <img src="images/bike-2.png" class="card-img image-grayscale" alt="...">
-                        <div class="card-img-overlay ">
+                        <img src="images/images.jpg " class="card-img  img-fluid p-5 " alt="...">
+                        <div class="card-img-overlay orange-color">
                             <h5 class="card-title">Honda Care® Plans</h5>
                             <p class="card-text pt2">Atlanta Speedwerks leads Honda Civic Type R TCRs at Lime Rock.</p>
-                            <p class="card-text">JULY 19, 2021</p>
+                            <p class="card-text">JULY 29, 2021</p>
                         </div>
                     </div>
                 </div>
